--- a/cloudnotes/pom.xml
+++ b/cloudnotes/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.3</version> <!-- You can update this to latest if needed -->
+        <version>3.2.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -19,6 +19,12 @@
 
     <properties>
         <java.version>17</java.version>
+
+        <!-- SonarQube properties -->
+        <sonar.projectKey>cloudnotes</sonar.projectKey>
+        <sonar.projectName>CloudNotes Project</sonar.projectName>
+        <sonar.host.url>http://your-sonarqube-server-url</sonar.host.url> 
+        <sonar.login>your_sonar_token_here</sonar.login> 
     </properties>
 
     <dependencies>
