--- a/cloudnotes/pom.xml
+++ b/cloudnotes/pom.xml
@@ -19,12 +19,6 @@
 
     <properties>
         <java.version>17</java.version>
-
-        <!-- SonarQube properties -->
-        <sonar.projectKey>cloudnotes</sonar.projectKey>
-        <sonar.projectName>CloudNotes Project</sonar.projectName>
-        <sonar.host.url>http://your-sonarqube-server-url</sonar.host.url>
-        <sonar.login>your_sonar_token_here</sonar.login>
     </properties>
 
     <dependencies>
@@ -52,9 +46,23 @@
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.9.1.2184</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sonar</goal>
+                        </goals>
+                        <configuration>
+                            <sonar.projectKey>cloudnotes</sonar.projectKey>
+                            <sonar.projectName>CloudNotes Project</sonar.projectName>
+                            <sonar.host.url>http://your-sonarqube-server-url</sonar.host.url>
+                            <sonar.login>your_sonar_token_here</sonar.login>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
-            <!-- Spring Boot Plugin to create executable JAR -->
+            <!-- Spring Boot Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
