--- a/cloudnotes/pom.xml
+++ b/cloudnotes/pom.xml
@@ -56,7 +56,7 @@
                             <sonar.projectKey>cloudnotes</sonar.projectKey>
                             <sonar.projectName>CloudNotes Project</sonar.projectName>
                             <sonar.host.url>http://your-sonarqube-server-url</sonar.host.url>
-                            <sonar.login>your_sonar_token_here</sonar.login>
+                            <sonar.login>your_sonar_token_here</sonar.login> <!-- Replace with your SonarQube token -->
                         </configuration>
                     </execution>
                 </executions>
