--- a/cloudnotes/pom.xml
+++ b/cloudnotes/pom.xml
@@ -18,7 +18,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
     </properties>
 
     <dependencies>
@@ -34,10 +34,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.11.0</version> <!-- Updated version to support JDK 21 -->
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>21</source>
+                    <target>21</target>
+                    <release>21</release> <!-- Optional but ensures compatibility -->
                 </configuration>
             </plugin>
 
